--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>viewability-and-impression-timing-demo</title>
-    <!-- gpt + main script -->
-    <script async src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'></script>
-    <script src="main.js"></script>
-    <!-- demo styles -->
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
-    <section>
-      <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum maxime delectus deserunt, modi tempora aliquid. Aperiam explicabo veniam, voluptas provident voluptatum voluptatibus omnis nesciunt minus, ut est odit porro harum sed corporis magnam. Facilis, dolor, autem. Eos, excepturi id delectus cum assumenda harum consequuntur eum error asperiores, inventore enim repudiandae?</p>
-      </div>
-
-      <!-- slot 1 -->
-      <!-- <div id='div-gpt-ad-9405734-1'>
-        <script>
-          googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); });
-        </script>
-      </div> -->
-
-    </section>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="blog-demo-gpt-s-viewability-and-impression-timing">
+  <title>blog-demo-gpt-s-viewability-and-impression-timing</title>
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <script async src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'></script>
+  <script src="assets/js/main.js"></script>
+</head>
+<body>  
+  <header>
+    <p>header</p>
+  </header>
+  <main>
+    <p>main</p>
+    <!-- slot 1 -->
+    <div id='div-gpt-ad-9405734-1'>
+      <script>
+        googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); });
+      </script>
+    </div>
+  </main>
+  <footer>
+    <p>footer</p>
+  </footer>
+</body>
 </html>
+
+
