--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,59 @@
   <script async src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'></script>
   <script src="assets/js/main.js"></script>
 </head>
-<body>  
-  <header>
-    <p>header</p>
-  </header>
-  <main>
-    <p>main</p>
-    <!-- slot 1 -->
-    <div id='div-gpt-ad-9405734-1'>
-      <script>
-        googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); });
-      </script>
+<body>
+  <div class="grid-container">
+    <div class="grid-ads-site-top">
+      <p>ads-site-top</p>
     </div>
-  </main>
-  <footer>
-    <p>footer</p>
-  </footer>
+    <header class="grid-header">
+      <nav class="navbar">
+        <div class="navbar-brand">
+          <h1>Blog Demo</h1>
+          <p>GPT's Viewability and Impression Timing</p>
+        </div>
+        <div class="navbar-items">
+          <ul>
+            <li class="navbar-item">
+              <a href="#">navbar-item-0</a>
+            </li>
+            <li class="navbar-item">
+              <a href="#">navbar-item-1</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <section class="grid-graph">
+      <p>graph</p>
+      <div class="timeline"><!-- timeline items --></div>
+    </section>
+    <main class="grid-main">
+      <p>main</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ratione ut, quae delectus iure, perferendis repellat ab dolores laborum nostrum error provident? Inventore dolores fugit corporis dolore ipsa? Quod, facere?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis perferendis impedit quasi expedita natus ratione, nulla omnis ex beatae aspernatur!</p>
+      <p>Lorem ipsum dolor sit.</p>
+      <hr>
+      <div class="ct-chart ct-perfect-fourth">ads</div>
+    </main>
+    <aside class="grid-aside">
+      <p>aside</p>
+      <hr>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, voluptatem.</p>
+      <!-- /567914328/test/desktop -->
+      <div id='div-gpt-ad-9405734-1'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); }); </script> </div>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita adipisci ab reprehenderit possimus a unde facilis ullam modi, saepe vero quod ducimus eius rerum numquam quas, labore, at impedit nobis quis eos quasi ut recusandae officia tenetur? Tenetur adipisci nesciunt soluta corporis dicta quam veritatis error quibusdam iure quidem nulla sed aliquam quod, veniam molestiae, pariatur autem assumenda magnam omnis totam asperiores beatae qui voluptatibus? Sunt ex obcaecati sapiente eum dicta totam nisi similique repellat dolores nihil omnis cum exercitationem voluptate commodi pariatur, sit vitae voluptatem quas at quo quidem officiis. Eveniet vitae, corrupti exercitationem odit iste doloremque rerum cum at accusamus dignissimos. Odio delectus unde eius explicabo! Voluptates, modi doloremque. Maiores, molestiae architecto. Officia nisi nemo in mollitia quod, molestias sed. Minus illo qui reprehenderit officia id aut dignissimos quam quas voluptatum expedita? Quia, quisquam maiores enim esse assumenda eaque rerum incidunt quam! Possimus laboriosam temporibus voluptas illo placeat facilis non voluptatum! Ipsa dolor accusamus voluptate similique. Unde repellendus doloremque tempora odit beatae? Ipsum, cumque excepturi? Maxime saepe, nemo, accusantium quos cum voluptas aspernatur incidunt nostrum veniam minus animi rerum, assumenda omnis perferendis. Debitis amet magni porro, totam, dolorum explicabo iusto animi officiis maiores fugit aspernatur exercitationem nostrum voluptas!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita adipisci ab reprehenderit possimus a unde facilis ullam modi, saepe vero quod ducimus eius rerum numquam quas, labore, at impedit nobis quis eos quasi ut recusandae officia tenetur? Tenetur adipisci nesciunt soluta corporis dicta quam veritatis error quibusdam iure quidem nulla sed aliquam quod, veniam molestiae, pariatur autem assumenda magnam omnis totam asperiores beatae qui voluptatibus? Sunt ex obcaecati sapiente eum dicta totam nisi similique repellat dolores nihil omnis cum exercitationem voluptate commodi pariatur, sit vitae voluptatem quas at quo quidem officiis. Eveniet vitae, corrupti exercitationem odit iste doloremque rerum cum at accusamus dignissimos. Odio delectus unde eius explicabo! Voluptates, modi doloremque. Maiores, molestiae architecto. Officia nisi nemo in mollitia quod, molestias sed. Minus illo qui reprehenderit officia id aut dignissimos quam quas voluptatum expedita? Quia, quisquam maiores enim esse assumenda eaque rerum incidunt quam! Possimus laboriosam temporibus voluptas illo placeat facilis non voluptatum! Ipsa dolor accusamus voluptate similique. Unde repellendus doloremque tempora odit beatae? Ipsum, cumque excepturi? Maxime saepe, nemo, accusantium quos cum voluptas aspernatur incidunt nostrum veniam minus animi rerum, assumenda omnis perferendis. Debitis amet magni porro, totam, dolorum explicabo iusto animi officiis maiores fugit aspernatur exercitationem nostrum voluptas!</p>
+    </aside>
+    <div class="grid-ads-site-bottom">
+      <p>ads-site-bottom</p>
+      <!-- /567914328/test/desktop -->
+      <div id='div-gpt-ad-1596659457894-0' style='width: 728px; height: 90px;'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-1596659457894-0'); }); </script> </div>
+    </div>
+    <footer class="grid-footer">
+      <p>footer</p>
+    </footer>
+  </div>
 </body>
 </html>
 
