Redefined timeline styles with flex

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </header>
     <section class="grid-graph">
       <p>graph</p>
-      <div class="timeline-elements"><!-- timeline-elements --></div>
+      <div class="timelines"><!-- timelines --></div>
     </section>
     <main class="grid-main">
       <p>main</p>
@@ -60,7 +60,7 @@
     <div class="grid-ads-site-bottom">
       <p>ads-site-bottom</p>
       <!-- /567914328/test/desktop -->
-      <div id='div-gpt-ad-1596659457894-0' style='width: 728px; height: 90px;'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-1596659457894-0'); }); </script> </div>
+      <div id='div-gpt-ad-1596659457894-0'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-1596659457894-0'); }); </script> </div>
     </div>
     <footer class="grid-footer">
       <p>footer</p>
