--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,14 @@
   <script>window.googletag = window.googletag || {cmd: []};</script>
   <script src="assets/js/demotag.js"></script>
   <script src="assets/js/gpt-slot-definitions.js"></script>
+  <script src="assets/js/main.js"></script>
 </head>
 <body>
   <div class="grid-container">
-    <div class="grid-ads-site-top">
-      <p>ads-site-top</p>
-    </div>
     <header class="grid-header">
       <nav class="navbar">
         <div class="navbar-brand">
-          <h1>Blog Demo</h1>
+          <h1><a href="./index.html">Blog Demo</a></h1>
           <p>GPT's Viewability and Impression Timing</p>
         </div>
         <div class="navbar-items">
@@ -42,6 +40,29 @@
     <main class="grid-main">
       <p>main</p>
       <hr>
+
+      <form class="page-settings">
+        <div class="option">
+          <label for="enableSingleRequest">enableSingleRequest</label>
+          <input type="checkbox" name="enableSingleRequest" id="enableSingleRequest">
+        </div>
+        <div class="option">
+          <label for="enableLazyLoad">enableLazyLoad</label>
+          <input type="checkbox" name="enableLazyLoad" id="enableLazyLoad">
+          <!-- // -->
+          <div class="sub-option">
+            <label for="fetchMarginPercent">fetchMarginPercent (0)</label>
+            <input type="range" min="0" max="500" value="0" step="100" name="fetchMarginPercent" id="fetchMarginPercent">
+          </div>
+          <div class="sub-option">
+            <label for="renderMarginPercent">renderMarginPercent (0)</label>
+            <input type="range" min="0" max="500" value="0" step="100" name="renderMarginPercent" id="renderMarginPercent">
+          </div>
+        </div>
+        <button type="submit">Reload Page</button>
+      </form>
+
+      <hr>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ratione ut, quae delectus iure, perferendis repellat ab dolores laborum nostrum error provident? Inventore dolores fugit corporis dolore ipsa? Quod, facere?</p>
       <p>Lorem ipsum dolor sit.</p>
     </main>
@@ -50,20 +71,15 @@
       <hr>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, voluptatem.</p>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam unde perferendis debitis saepe voluptatum excepturi fugiat fugit tempora, nobis eius quas non dicta dolores aliquid libero molestiae. Non suscipit nesciunt harum laboriosam quae enim obcaecati quasi ducimus. Sapiente, cupiditate numquam?</p>
-      <!-- /567914328/test/desktop -->
-      <div id='div-gpt-ad-9405734-1'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); }); </script> </div>
+      <div id='div-gpt-ad-9405734-0'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-0'); }); </script> </div>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita adipisci ab reprehenderit possimus a unde facilis ullam modi, saepe vero quod ducimus eius rerum numquam quas, labore, at impedit nobis quis eos quasi ut recusandae officia tenetur? Tenetur adipisci nesciunt soluta corporis dicta quam veritatis error quibusdam iure quidem nulla sed aliquam quod, veniam molestiae, pariatur autem assumenda magnam omnis totam asperiores beatae qui voluptatibus? Sunt ex obcaecati sapiente eum dicta totam nisi similique repellat dolores nihil omnis cum exercitationem voluptate commodi pariatur, sit vitae voluptatem quas at quo quidem officiis. Eveniet vitae, corrupti exercitationem odit iste doloremque rerum cum at accusamus dignissimos. Odio delectus unde eius explicabo! Voluptates, modi doloremque. Maiores, molestiae architecto. Officia nisi nemo in mollitia quod, molestias sed. Minus illo qui reprehenderit officia id aut dignissimos quam quas voluptatum expedita? Quia, quisquam maiores enim esse assumenda eaque rerum incidunt quam! Possimus laboriosam temporibus voluptas illo placeat facilis non voluptatum! Ipsa dolor accusamus voluptate similique. Unde repellendus doloremque tempora odit beatae? Ipsum, cumque excepturi? Maxime saepe, nemo, accusantium quos cum voluptas aspernatur incidunt nostrum veniam minus animi rerum, assumenda omnis perferendis. Debitis amet magni porro, totam, dolorum explicabo iusto animi officiis maiores fugit aspernatur exercitationem nostrum voluptas!</p>
     </aside>
     <aside class="grid-aside-bottom">
       <p>aside-bottom</p>
       <hr>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita adipisci ab reprehenderit possimus a unde facilis ullam modi, saepe vero quod ducimus eius rerum numquam quas, labore, at impedit nobis quis eos quasi ut recusandae officia tenetur? Tenetur adipisci nesciunt soluta corporis dicta quam veritatis error quibusdam iure quidem nulla sed aliquam quod, veniam molestiae, pariatur autem assumenda magnam omnis totam asperiores beatae qui voluptatibus? Sunt ex obcaecati sapiente eum dicta totam nisi similique repellat dolores nihil omnis cum exercitationem voluptate commodi pariatur, sit vitae voluptatem quas at quo quidem officiis. Eveniet vitae, corrupti exercitationem odit iste doloremque rerum cum at accusamus dignissimos. Odio delectus unde eius explicabo! Voluptates, modi doloremque. Maiores, molestiae architecto. Officia nisi nemo in mollitia quod, molestias sed. Minus illo qui reprehenderit officia id aut dignissimos quam quas voluptatum expedita? Quia, quisquam maiores enim esse assumenda eaque rerum incidunt quam! Possimus laboriosam temporibus voluptas illo placeat facilis non voluptatum! Ipsa dolor accusamus voluptate similique. Unde repellendus doloremque tempora odit beatae? Ipsum, cumque excepturi? Maxime saepe, nemo, accusantium quos cum voluptas aspernatur incidunt nostrum veniam minus animi rerum, assumenda omnis perferendis.</p>
+      <div id='div-gpt-ad-9405734-1'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); }); </script> </div>
     </aside>
-    <div class="grid-ads-site-bottom">
-      <p>ads-site-bottom</p>
-      <!-- /567914328/test/desktop -->
-      <div id='div-gpt-ad-1596659457894-0'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-1596659457894-0'); }); </script> </div>
-    </div>
     <footer class="grid-footer">
       <p>footer</p>
     </footer>
