--- a/src/index.html
+++ b/src/index.html
@@ -15,32 +15,39 @@
 </head>
 <body>
   <div class="grid-container">
+    <!-- site header -->
     <header class="grid-header">
       <nav class="navbar">
         <div class="navbar-brand">
           <h1><a href="./index.html">Blog Demo</a></h1>
           <p>GPT's Viewability and Impression Timing</p>
         </div>
-        <div class="navbar-items">
-          <ul>
-            <li class="navbar-item">
-              <a href="#">navbar-item-0</a>
-            </li>
-            <li class="navbar-item">
-              <a href="#">navbar-item-1</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-items">
+          <li class="navbar-item">
+            <a href="#">navbar-item-0</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#">navbar-item-1</a>
+          </li>
+        </ul>
       </nav>
     </header>
+    <!-- timelines wrapper -->
+    <section class="grid-entrance">
+      <h1>Before You Begin!</h1>
+      <p>You should always be using ad/tracker blockers. But just for this demo you must disable them temporarily. Because this demo is all about ads.</p>
+    </section>
+    <!-- timelines wrapper -->
     <section class="grid-graph">
-      <p>graph</p>
+      <h1>Event Timelines</h1>
       <div class="timelines"><!-- timelines --></div>
     </section>
+    <!-- main content -->
     <main class="grid-main">
-      <p>main</p>
-      <hr>
-
+      <h1>GPT Lifecycle Events</h1>
+      <p>A simple playground page for GPT lifecycle events for display ads.</p>
+      <h2>Customization Form</h2>
+      <!-- customization form -->
       <form class="page-settings">
         <div class="option">
           <label for="enableSingleRequest">enableSingleRequest</label>
@@ -64,26 +71,51 @@
         </div>
         <div class="submit">
           <button type="submit">Reload Page</button>
-          <span>Clicking this button will reload the page!</span>
         </div>
       </form>
-
-      <hr>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ratione ut, quae delectus iure, perferendis repellat ab dolores laborum nostrum error provident? Inventore dolores fugit corporis dolore ipsa? Quod, facere?</p>
-      <p>Lorem ipsum dolor sit.</p>
+      <!-- customization form details and description -->
+      <h2>Description</h2>
+      <div class="form-info">
+        <p>Use the form above to change GPT options. Clicking submit button will reload the page with selected configuration.</p>
+        <p>Follow timelines to observe what changes on selected GPT configuration. Here are some hints for GPT options available:</p>
+        <ul>
+          <li>
+            <p><strong>enableSingleRequest</strong> Enables GPT's single request mode. <a href="https://developers.google.com/doubleclick-gpt/reference#boolean-enablesinglerequest" target="_blank">@docs</a></p>
+            <p>author notes</p>
+          </li>
+          <li>
+            <p><strong>enableLazyLoad</strong> Enables GPT's build in lazyloading feature. <a href="https://developers.google.com/doubleclick-gpt/reference#googletag.PubAdsService_enableLazyLoad" target="_blank">@docs</a></p>
+            <p>author notes</p>
+          </li>
+          <li>
+            <p><strong>fetchMarginPercent</strong> Start fetching before entering viewport. <a href="https://developers.google.com/doubleclick-gpt/reference#googletag.PubAdsService_enableLazyLoad" target="_blank">@docs</a></p>
+            <p>author notes</p>
+          </li>
+          <li>
+            <p><strong>renderMarginPercent</strong> Start rendering before entering viewport. <a href="https://developers.google.com/doubleclick-gpt/reference#googletag.PubAdsService_enableLazyLoad" target="_blank">@docs</a></p>
+            <p>author notes</p>
+          </li>
+        </ul>
+      </div>
     </main>
     <aside class="grid-aside-top">
-      <p>aside-top</p>
-      <hr>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur, voluptatem.</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam unde perferendis debitis saepe voluptatum excepturi fugiat fugit tempora, nobis eius quas non dicta dolores aliquid libero molestiae. Non suscipit nesciunt harum laboriosam quae enim obcaecati quasi ducimus. Sapiente, cupiditate numquam?</p>
+      <!-- top ad description -->
+      <h1>Top Slot</h1>
+      <div>
+        <p>This page has 2 ad slots on sidebar element. One is at top "<code>sidebar-top-slot</code>" and the other one is at bottom "<code>sidebar-bottom-slot</code>".</p>
+        <p>There is a seperator between these two ad slots to push bottom ad out of first viewport. (to observe lazyloading behaviour clearly)</p>
+      </div>
+      <!-- top ad -->
       <div id='div-gpt-ad-9405734-0'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-0'); }); </script> </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita adipisci ab reprehenderit possimus a unde facilis ullam modi, saepe vero quod ducimus eius rerum numquam quas, labore, at impedit nobis quis eos quasi ut recusandae officia tenetur? Tenetur adipisci nesciunt soluta corporis dicta quam veritatis error quibusdam iure quidem nulla sed aliquam quod, veniam molestiae, pariatur autem assumenda magnam omnis totam asperiores beatae qui voluptatibus? Sunt ex obcaecati sapiente eum dicta totam nisi similique repellat dolores nihil omnis cum exercitationem voluptate commodi pariatur, sit vitae voluptatem quas at quo quidem officiis. Eveniet vitae, corrupti exercitationem odit iste doloremque rerum cum at accusamus dignissimos. Odio delectus unde eius explicabo! Voluptates, modi doloremque. Maiores, molestiae architecto. Officia nisi nemo in mollitia quod, molestias sed. Minus illo qui reprehenderit officia id aut dignissimos quam quas voluptatum expedita? Quia, quisquam maiores enim esse assumenda eaque rerum incidunt quam! Possimus laboriosam temporibus voluptas illo placeat facilis non voluptatum! Ipsa dolor accusamus voluptate similique. Unde repellendus doloremque tempora odit beatae? Ipsum, cumque excepturi? Maxime saepe, nemo, accusantium quos cum voluptas aspernatur incidunt nostrum veniam minus animi rerum, assumenda omnis perferendis. Debitis amet magni porro, totam, dolorum explicabo iusto animi officiis maiores fugit aspernatur exercitationem nostrum voluptas!</p>
+    </aside>
+    <aside class="grid-aside-middle">
+      <div class="sidebar-separator">
+        &uarr;<br>separator<br>&darr;
+      </div>
     </aside>
     <aside class="grid-aside-bottom">
-      <p>aside-bottom</p>
-      <hr>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita adipisci ab reprehenderit possimus a unde facilis ullam modi, saepe vero quod ducimus eius rerum numquam quas, labore, at impedit nobis quis eos quasi ut recusandae officia tenetur? Tenetur adipisci nesciunt soluta corporis dicta quam veritatis error quibusdam iure quidem nulla sed aliquam quod, veniam molestiae, pariatur autem assumenda magnam omnis totam asperiores beatae qui voluptatibus? Sunt ex obcaecati sapiente eum dicta totam nisi similique repellat dolores nihil omnis cum exercitationem voluptate commodi pariatur, sit vitae voluptatem quas at quo quidem officiis. Eveniet vitae, corrupti exercitationem odit iste doloremque rerum cum at accusamus dignissimos. Odio delectus unde eius explicabo! Voluptates, modi doloremque. Maiores, molestiae architecto. Officia nisi nemo in mollitia quod, molestias sed. Minus illo qui reprehenderit officia id aut dignissimos quam quas voluptatum expedita? Quia, quisquam maiores enim esse assumenda eaque rerum incidunt quam! Possimus laboriosam temporibus voluptas illo placeat facilis non voluptatum! Ipsa dolor accusamus voluptate similique. Unde repellendus doloremque tempora odit beatae? Ipsum, cumque excepturi? Maxime saepe, nemo, accusantium quos cum voluptas aspernatur incidunt nostrum veniam minus animi rerum, assumenda omnis perferendis.</p>
+      <h1>Bottom Slot</h1>
+      <!-- bottom ad -->
       <div id='div-gpt-ad-9405734-1'> <script> googletag.cmd.push(function() { googletag.display('div-gpt-ad-9405734-1'); }); </script> </div>
     </aside>
     <footer class="grid-footer">
